# graphics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL01.cpp  README.md
include/: IRender.h
shader/: basic_vertext.glsl
src/: OpenGL_Draw_Practice.cpp  main.cpp
src/c_pure/: .gitignore  CMakeLists.txt  Makefile  heart_curve.c  heart_curve.h  koch.txt  koch_snow_flake.h  koch_snowflake.c  light.c  light.h  line.c  line.h  main.c  pub.c  pub.h
src/cpp_testbed/: CMakeLists.txt  CircularQueue.h  ConstructorVerify.cpp  ConstructorVerify.h  main.cpp  readme.md
src/opengl/: CMakeLists.txt  Camera.h  KochSnowFlake.cpp  KochSnowFlake.h  Koch_SnowFlake.cpp  Koch_SnowFlake.h  Light.cpp  Light.h  Makefile  OpenGL_Primitive.cpp  OpenGL_Shader.cpp  Point.cpp  Point.h  PrimitiveRender.cpp  Shader.cpp  Shader.h  TextureRender.cpp  TextureRender.h  glad.c  main.cpp  stb_image.cpp
src/opengl/include/: IRender.h  OpenGL_Primitive.h  OpenGL_Shader.h  PrimitiveRender.h  Shader.h
src/opengl/shader/: basic_fragment.glsl  basic_vertex.glsl  basic_vertext.glsl  color_fragment.glsl  color_vertex.glsl
